--- a/src/app/modules/ver-corte/ver-corte.component.html
+++ b/src/app/modules/ver-corte/ver-corte.component.html
@@ -26,7 +26,7 @@
                   <span class="download-text">Descargar Reporte</span>
                </button>
                <mat-menu #menu2="matMenu">
-                  <button mat-menu-item (click)="descargarPDF2()">.pdf</button>
+                  <!--<button mat-menu-item (click)="descargarPDF2()">.pdf</button>-->
                   <button mat-menu-item (click)="descargarExcel2()">.xlsx</button>
                </mat-menu>
             </div>
