--- a/src/app/modules/categorias/categorias.component.html
+++ b/src/app/modules/categorias/categorias.component.html
@@ -21,7 +21,7 @@
      />
   </mat-form-field>
   <div  class="table-container">
-     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
         <ng-container matColumnDef="nombre">
            <th mat-header-cell *matHeaderCellDef>Nombre</th>
            <td mat-cell *matCellDef="let categoria">{{ categoria.nombre }}</td>
@@ -30,17 +30,22 @@
            <th mat-header-cell *matHeaderCellDef>Descripcion</th>
            <td mat-cell *matCellDef="let categoria">{{ categoria.descripcion }}</td>
         </ng-container>
-        <ng-container matColumnDef="estatus">
-           <th mat-header-cell *matHeaderCellDef>Estatus</th>
-           <td mat-cell *matCellDef="let categoria">
-              {{ categoria.estatus == "1" ? "Categoria activa" : "Categoria inactiva" }}
-           </td>
-        </ng-container>
+  <!--    <ng-container matColumnDef="estatus">
+         <th mat-header-cell *matHeaderCellDef>Estatus</th>
+         <td mat-cell *matCellDef="let categoria">
+            <ng-container *ngIf="categoria.estatus === 1">
+               Categoria activa
+            </ng-container>
+            <ng-template *ngIf="categoria.estatus === 0">
+               Categoria Inactiva
+            </ng-template>
+         </td>
+      </ng-container>   -->           
         <ng-container matColumnDef="fechaCreacion">
            <th mat-header-cell *matHeaderCellDef>Fecha Creacion</th>
            <td mat-cell *matCellDef="let categoria">{{ categoria.fechaCreacion }}</td>
         </ng-container>
-        <ng-container matColumnDef="acciones">
+        <ng-container matColumnDef="acciones" *ngIf="dataSource.data.length > 0">
            <th mat-header-cell *matHeaderCellDef>Acciones</th>
            <td mat-cell *matCellDef="let categoria">
               <button mat-icon-button color="primary" (click)="editarCategoria(categoria.idCategoria)">
@@ -57,8 +62,8 @@
               </div>
            </td>
         </ng-container>
-        <tr mat-header-row *matHeaderRowDef="['nombre', 'descripcion', 'estatus', 'fechaCreacion', 'acciones', 'activar']"></tr>
-        <tr mat-row *matRowDef="let categoria; columns: ['nombre', 'descripcion', 'estatus', 'fechaCreacion', 'acciones', 'activar']"></tr>
+        <tr mat-header-row *matHeaderRowDef="['nombre', 'descripcion', 'fechaCreacion', 'acciones', 'activar']"></tr>
+        <tr mat-row *matRowDef="let categoria; columns: ['nombre', 'descripcion', 'fechaCreacion', 'acciones', 'activar']"></tr>
      </table>
   </div>
   <mat-paginator
