--- a/src/app/modules/plan-lista/membresias.component.html
+++ b/src/app/modules/plan-lista/membresias.component.html
@@ -33,21 +33,20 @@
         </ng-container>
         <ng-container matColumnDef="price">
            <th mat-header-cell *matHeaderCellDef>Precio</th>
-           <td mat-cell *matCellDef="let item">{{ item.precio }}</td>
+           <td mat-cell *matCellDef="let item">${{ item.precio }}</td>
         </ng-container>
-        <ng-container matColumnDef="duration">
+        <!--<ng-container matColumnDef="duration">
            <th mat-header-cell *matHeaderCellDef>Duración</th>
            <td mat-cell *matCellDef="let item">{{ item.duracion}}</td>
         </ng-container>
         <ng-container matColumnDef="servicios">
            <th mat-header-cell *matHeaderCellDef>servicios</th>
            <td mat-cell *matCellDef="let item">
-              <!--<button class="button_eye" (click)="getServices(item.idMem)" (click)="openDialogService()">-->
               <button class="button_eye" (click)="openDialogService(item.idMem, item.tipo_membresia)">
                  <mat-icon>visibility</mat-icon>
               </button>
            </td>
-        </ng-container>
+        </ng-container>-->
         <!--<ng-container matColumnDef="status">
            <th mat-header-cell *matHeaderCellDef>Estatus</th>
            <td mat-cell *matCellDef="let item">
@@ -58,7 +57,6 @@
         <ng-container matColumnDef="actions">
            <th mat-header-cell *matHeaderCellDef>Acciones</th>
            <td mat-cell *matCellDef="let item">
-              <!--<button mat-icon-button color="primary" routerLink="../../admin/editarMembresias/{{item.idMem}}">-->
               <button mat-icon-button color="primary" (click)="openDialogEdit(item.idMem, item.tipo_membresia)">
                  <mat-icon>edit</mat-icon>
               </button>
