--- a/src/app/modules/service-dialog/service-dialog.component.html
+++ b/src/app/modules/service-dialog/service-dialog.component.html
@@ -1,59 +1,59 @@
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
- 
-  <label class="title" mat-dialog-title>SERVICIOS</label>
- 
-  <div mat-dialog-content>
-     <form [formGroup]="serviceForm" >
-        <br>
-        <div>
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true">
+   <p style="color: white" > Cargando... </p>
+</ngx-spinner>
+<label class="title" mat-dialog-title>SERVICIOS</label>
+<div mat-dialog-content>
+   <form [formGroup]="serviceForm" >
+      <br>
+      <div>
          <div style="color:red">{{message}}</div>
-           <div >
-              <div class="row">
-                 <div class="col-sm-6">
-                    <mat-form-field appearance="outline" style="width: 95%;">
-                       <mat-label>Nombre del servicio</mat-label>
-                       <input matInput formControlName="nombre_servicio" placeholder="Nombre del servicio" />
-                       <mat-error *ngIf="isFieldInvalidService('nombre_servicio', 'required')">
-                          El nombre es requerido.
-                       </mat-error>
-                       <mat-error *ngIf="isFieldInvalidService('nombre_servicio', 'pattern')">
-                          Solo se aceptan letras.
-                       </mat-error>
-                    </mat-form-field>
-                 </div>
-                 <div class="col-sm-6">
-                    <mat-form-field appearance="outline" style="width: 95%;">
-                       <mat-label>Precio unitario</mat-label>
-                       <input matInput formControlName="precio_unitario" placeholder="Precio unitario" />
-                       <mat-error *ngIf="isFieldInvalidService('precio_unitario', 'required')">
-                          El precio es requerido.
-                       </mat-error>
-                       <mat-error *ngIf="isFieldInvalidService('precio_unitario', 'pattern')">
-                          Solo se aceptan números.
-                       </mat-error>
-                    </mat-form-field>
-                 </div>
-              </div>
-              <div class="row">
-                 <div class="col-sm-6">
-                    <mat-form-field appearance="outline" style="width: 95%;">
-                       <mat-label>Detalles</mat-label>
-                       <textarea matInput formControlName="detalles" placeholder="Detalles"></textarea>
-                       <mat-error *ngIf="isFieldInvalidService('detalles', 'required')">
-                          El detalle es requerido.
-                       </mat-error>
-                       <mat-error *ngIf="isFieldInvalidService('detalles', 'pattern')">
-                          Solo se aceptan letras.
-                       </mat-error>
-                    </mat-form-field>
-                 </div>
-              </div>
-           </div>
-        </div>
-     </form>
-  </div>
-  <div style="display: flex; justify-content: center;" mat-dialog-actions>
-     <button *ngIf="seleccionado == 1" mat-stroked-button type="submit" (click)="validaFormService()" style="background-color: #fd9727; font-size: 20px;  height: 40px; margin-right: 90px;">Aceptar</button>
-     <button *ngIf="seleccionado == 2" mat-stroked-button type="submit" (click)="actualizarForm()" style="background-color: #fd9727; font-size: 20px;  height: 40px; margin-right: 90px;">Actualizar</button>
-     <button mat-stroked-button (click)="cancelar()" style="background-color: #000000; font-size: 20px; height: 40px;color: white;">Cancelar</button>
-  </div>
+         <div >
+            <div class="row">
+               <div class="col-sm-6">
+                  <mat-form-field appearance="outline" style="width: 95%;">
+                     <mat-label>Nombre del servicio</mat-label>
+                     <input matInput formControlName="nombre_servicio" placeholder="Nombre del servicio" />
+                     <mat-error *ngIf="isFieldInvalidService('nombre_servicio', 'required')">
+                        El nombre es requerido.
+                     </mat-error>
+                     <mat-error *ngIf="isFieldInvalidService('nombre_servicio', 'pattern')">
+                        Solo se aceptan letras.
+                     </mat-error>
+                  </mat-form-field>
+               </div>
+               <div class="col-sm-6">
+                  <mat-form-field appearance="outline" style="width: 95%;">
+                     <mat-label>Precio unitario</mat-label>
+                     <input matInput formControlName="precio_unitario" placeholder="Precio unitario" />
+                     <mat-error *ngIf="isFieldInvalidService('precio_unitario', 'required')">
+                        El precio es requerido.
+                     </mat-error>
+                     <mat-error *ngIf="isFieldInvalidService('precio_unitario', 'pattern')">
+                        Solo se aceptan números.
+                     </mat-error>
+                  </mat-form-field>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-sm-6">
+                  <mat-form-field appearance="outline" style="width: 95%;">
+                     <mat-label>Detalles</mat-label>
+                     <textarea matInput formControlName="detalles" placeholder="Detalles"></textarea>
+                     <mat-error *ngIf="isFieldInvalidService('detalles', 'required')">
+                        El detalle es requerido.
+                     </mat-error>
+                     <mat-error *ngIf="isFieldInvalidService('detalles', 'pattern')">
+                        Solo se aceptan letras.
+                     </mat-error>
+                  </mat-form-field>
+               </div>
+            </div>
+         </div>
+      </div>
+   </form>
+</div>
+<div style="display: flex; justify-content: center;" mat-dialog-actions>
+   <button *ngIf="seleccionado == 1" mat-stroked-button type="submit" (click)="validaFormService()" style="background-color: #fd9727; font-size: 20px;  height: 40px; margin-right: 90px;">Aceptar</button>
+   <button *ngIf="seleccionado == 2" mat-stroked-button type="submit" (click)="actualizarForm()" style="background-color: #fd9727; font-size: 20px;  height: 40px; margin-right: 90px;">Actualizar</button>
+   <button mat-stroked-button (click)="cancelar()" style="background-color: #000000; font-size: 20px; height: 40px;color: white;">Cancelar</button>
+</div>
