--- a/src/app/modules/categorias/categorias.component.html
+++ b/src/app/modules/categorias/categorias.component.html
@@ -30,7 +30,7 @@
            <th mat-header-cell *matHeaderCellDef>Descripcion</th>
            <td mat-cell *matCellDef="let categoria">{{ categoria.descripcion }}</td>
         </ng-container>
-  <!--    <ng-container matColumnDef="estatus">
+   <ng-container matColumnDef="estatus">
          <th mat-header-cell *matHeaderCellDef>Estatus</th>
          <td mat-cell *matCellDef="let categoria">
             <ng-container *ngIf="categoria.estatus === 1">
@@ -40,7 +40,7 @@
                Categoria Inactiva
             </ng-template>
          </td>
-      </ng-container>   -->           
+      </ng-container>             
         <ng-container matColumnDef="fechaCreacion">
            <th mat-header-cell *matHeaderCellDef>Fecha Creacion</th>
            <td mat-cell *matCellDef="let categoria">{{ categoria.fechaCreacion }}</td>
@@ -62,8 +62,8 @@
               </div>
            </td>
         </ng-container>
-        <tr mat-header-row *matHeaderRowDef="['nombre', 'descripcion', 'fechaCreacion', 'acciones', 'activar']"></tr>
-        <tr mat-row *matRowDef="let categoria; columns: ['nombre', 'descripcion', 'fechaCreacion', 'acciones', 'activar']"></tr>
+        <tr mat-header-row *matHeaderRowDef="['nombre', 'descripcion','estatus' ,'fechaCreacion', 'acciones', 'activar']"></tr>
+        <tr mat-row *matRowDef="let categoria; columns: ['nombre', 'descripcion','estatus', 'fechaCreacion', 'acciones', 'activar']"></tr>
      </table>
   </div>
   <mat-paginator
