--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
       <div class="content_grid_padre">
         <div class="content_grid_h1">
           <div class="title_page">
-            <h1>Punto de venta</h1>
+            <h1>¿Olvidaste tu contraseña?</h1>
             <h4>Ingrese su correo</h4>
           </div>
           <!--cierra div title pagina-->
