--- a/src/app/modules/plan-agregar/membresias-agregar.component.html
+++ b/src/app/modules/plan-agregar/membresias-agregar.component.html
@@ -87,6 +87,8 @@
                                   </mat-form-field>
                             </p>
 
+                            <p *ngIf="plan && plan.length > 0">Agrega otro servicio:<a href="javascript:void(0)" (click)="openDialog()">Aquí</a></p>
+
                             <ng-template #noServicios>
                                 <p>No hay membresías disponibles.</p>
                                 <p>Agrega tu membresía: <a href="javascript:void(0)" (click)="openDialog()">Aquí</a></p>
