--- a/src/app/modules/categorias/categorias.component.html
+++ b/src/app/modules/categorias/categorias.component.html
@@ -21,50 +21,38 @@
      />
   </mat-form-field>
   <div  class="table-container">
-     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
-        <ng-container matColumnDef="nombre">
-           <th mat-header-cell *matHeaderCellDef>Nombre</th>
-           <td mat-cell *matCellDef="let categoria">{{ categoria.nombre }}</td>
-        </ng-container>
-        <ng-container matColumnDef="descripcion">
-           <th mat-header-cell *matHeaderCellDef>Descripcion</th>
-           <td mat-cell *matCellDef="let categoria">{{ categoria.descripcion }}</td>
-        </ng-container>
-   <ng-container matColumnDef="estatus">
-         <th mat-header-cell *matHeaderCellDef>Estatus</th>
-         <td mat-cell *matCellDef="let categoria">
-            <ng-container *ngIf="categoria.estatus === 1">
-               Categoria activa
-            </ng-container>
-            <ng-template *ngIf="categoria.estatus === 0">
-               Categoria Inactiva
-            </ng-template>
+   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
+      <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+         <th mat-header-cell *matHeaderCellDef style="text-align: center;">{{ column }}</th>
+         <td mat-cell *matCellDef="let categoria" style="text-align: center;">
+            <ng-container *ngIf="column === 'Nombre'">
+               {{ categoria.nombre }}
+             </ng-container>
+             <ng-container *ngIf="column === 'Descripción'">
+               {{ categoria.descripcion }}
+             </ng-container>
+             <ng-container *ngIf="column === 'Fecha Creación'">
+               {{ categoria.fechaCreacion }}
+             </ng-container>
+             <ng-container *ngIf="column === 'Status'">
+               {{ categoria.estatus }}
+             </ng-container>
+             <ng-container *ngIf="column === 'Acciones' && dataSource.data && dataSource.data.length > 0">
+               <button mat-icon-button color="primary" (click)="editarCategoria(categoria)">
+                  <mat-icon>edit</mat-icon>
+               </button>
+             </ng-container>
+             <ng-container *ngIf="column === 'Activar'">
+               <div class="toggle-container">
+                  <input type="checkbox" id="toggle{{categoria.idCategoria}}" class="toggle-checkbox" [checked]="categoria.estatus == '1'" (change)="toggleCheckbox(categoria.idCategoria, categoria.estatus)">
+                  <label for="toggle{{categoria.idCategoria}}" class="toggle-label"></label>
+               </div>
+             </ng-container>
          </td>
-      </ng-container>             
-        <ng-container matColumnDef="fechaCreacion">
-           <th mat-header-cell *matHeaderCellDef>Fecha Creacion</th>
-           <td mat-cell *matCellDef="let categoria">{{ categoria.fechaCreacion }}</td>
-        </ng-container>
-        <ng-container matColumnDef="acciones" *ngIf="dataSource.data.length > 0">
-           <th mat-header-cell *matHeaderCellDef>Acciones</th>
-           <td mat-cell *matCellDef="let categoria">
-              <button mat-icon-button color="primary" (click)="editarCategoria(categoria.idCategoria)">
-                 <mat-icon>edit</mat-icon>
-              </button>
-           </td>
-        </ng-container>
-        <ng-container matColumnDef="activar">
-           <th mat-header-cell *matHeaderCellDef>Activar</th>
-           <td mat-cell *matCellDef="let categoria">
-              <div class="toggle-container">
-                 <input type="checkbox" id="toggle{{categoria.idCategoria}}" class="toggle-checkbox" [checked]="categoria.estatus == '1'" (change)="toggleCheckbox(categoria.idCategoria, categoria.estatus)">
-                 <label for="toggle{{categoria.idCategoria}}" class="toggle-label"></label>
-              </div>
-           </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="['nombre', 'descripcion','estatus' ,'fechaCreacion', 'acciones', 'activar']"></tr>
-        <tr mat-row *matRowDef="let categoria; columns: ['nombre', 'descripcion','estatus', 'fechaCreacion', 'acciones', 'activar']"></tr>
-     </table>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let categoria; columns: displayedColumns"></tr>
+   </table>
   </div>
   <mat-paginator
      [pageSizeOptions]="[4, 10, 15, 20]"
