--- a/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
+++ b/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
@@ -98,7 +98,7 @@
                                         <mat-option  value="365">1 año</mat-option>
                                       </mat-select>
                                     <mat-error *ngIf="isFieldInvalid('duracion', 'required')">
-                                        la duracion es requerida.
+                                        La duracion es requerida.
                                       </mat-error>
                                 </mat-form-field>
 
@@ -110,7 +110,9 @@
                                 <mat-form-field style="display: inline-block; width: 95%; height: 110px;" required appearance="outline">
                                     <mat-label>Detalles</mat-label>
                                     <textarea class="textarea" matInput rows="4" placeholder="Detalles" cols="50" style="display: inline-block; width: 100%;height: 100%;" id="detalles" formControlName="detalles"> </textarea>
-                                    
+                                    <mat-error *ngIf="isFieldInvalid('detalles', 'required')">
+                                        Los detalles son requeridos.
+                                      </mat-error>
                                 </mat-form-field>
                             </p>
                         </div>
