se guardan las membresias

--- a/src/app/modules/plan-agregar/membresias-agregar.component.html
+++ b/src/app/modules/plan-agregar/membresias-agregar.component.html
@@ -87,7 +87,7 @@
                                   </mat-form-field>
                             </p>
 
-                            <p *ngIf="plan && plan.length > 0">Agrega otro servicio:<a href="javascript:void(0)" (click)="openDialog()">Aquí</a></p>
+                            <p *ngIf="plan && plan.length > 0">Agrega otra membresía:<a href="javascript:void(0)" (click)="openDialog()">Aquí</a></p>
 
                             <ng-template #noServicios>
                                 <p>No hay membresías disponibles.</p>
