--- a/src/app/modules/membresias-lista/membresias.component.html
+++ b/src/app/modules/membresias-lista/membresias.component.html
@@ -37,14 +37,14 @@
            <th mat-header-cell *matHeaderCellDef>Duración</th>
            <td mat-cell *matCellDef="let item">{{ item.duracion}} días</td>
         </ng-container>
-        <ng-container matColumnDef="servicios">
+       <!-- <ng-container matColumnDef="servicios">
            <th mat-header-cell *matHeaderCellDef>servicios</th>
            <td mat-cell *matCellDef="let item">
               <button class="button_eye" (click)="openDialogService(item.idMem, item.tipo_membresia)">
                  <mat-icon>visibility</mat-icon>
               </button>
            </td>
-        </ng-container>
+        </ng-container>-->
         <ng-container matColumnDef="actions">
            <th mat-header-cell *matHeaderCellDef>Acciones</th>
            <td mat-cell *matCellDef="let item">
