componente subir archivos
creacion y funcionalidad de componente para subir un archivo

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -64,6 +64,16 @@
                </div>
             </div>
          </div>
+
+         <div class="col-md-6" >
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Cargar documentos</h4>
+                  <p class="card-text">Hacer la carga de archivos relacionados a la sucursal</p>
+                  <a class="btn btn-gym" routerLink="../archivos">Cargar</a>
+               </div>
+            </div>
+         </div>
       </div>
 
       <div class="row mt-4" *ngIf="isAdmin()">
