--- a/src/app/modules/crearProducto/crearProducto.component.html
+++ b/src/app/modules/crearProducto/crearProducto.component.html
@@ -25,7 +25,7 @@
                              type="text"
                              matInput
                              autocomplete="off"
-                             placeholder="escribelo o escanealo" minlength="12" maxlength="15"
+                             placeholder="escribelo o escanealo"
                              />
                        </mat-form-field>
                     </p>
@@ -88,33 +88,63 @@
                        </p>
                     </div>
                  </div>
+
+
                  <div class="row">
+
+
+
+
                     <div class="col-sm-6">
-                       <p>
-                        <label >Tipo de producto:</label>
-                          <mat-form-field appearance="outline" style="width: 100%;">
-                             <mat-label>Categoria de producto</mat-label>
-                             <mat-select
-                             id="idCategoria"
-                             name="idCategoria"
-                             formControlName="idCategoria"
-                             (ngModelChange)="infoCategoria(+showCategoria.value)"
-                             #showCategoria
-                             >
-                             <mat-option
-                             *ngFor="let item of listaCategorias"
-                             [value]="+item.idCategoria"
-                             >{{ item.nombre }}</mat-option
-                                >
-                             </mat-select>
-                             <mat-error *ngIf="form.get('idCategoria')?.hasError('required')">
-                                <strong class="txt_msg">**Campo requerido </strong>
-                             </mat-error>
-                          </mat-form-field>
+                       <p  *ngIf="listaCategorias && listaCategorias.length > 0; else noServicios">
+                        <label >Categoria de producto:</label>
+                        <mat-form-field appearance="outline" style="width: 100%;">
+                           <mat-label>Categoria de producto</mat-label>
+                           <mat-select formControlName="idCategoria" multiple="false">
+                             <mat-option *ngFor="let categoria of listaCategorias" [value]="categoria.idCategoria">
+                               {{ categoria.nombre }}
+                             </mat-option>
+                           </mat-select>
+                           
+                           <mat-error *ngIf="form.get('idCategoria')?.hasError('required')">
+                             <strong class="txt_msg">**Campo requerido </strong>
+                           </mat-error>
+                         </mat-form-field>
+ 
                        </p>
-                       <fieldset *ngIf="showCategoria.value"
+                       <ng-template #noServicios>
+                        <p>No hay categorias disponibles.</p>
+                        
+                    </ng-template> 
+                    <p>Agrega tu categoria: <a href="javascript:void(0)" (click)="altaCategoria()" >Aquí</a></p>
+
+                    <ng-container *ngIf="form.get('idCategoria')?.value">
+
+                       <fieldset 
                           >
                           <strong>Características de consumibles</strong>
+                          <mat-form-field appearance="outline" class="inputs_properties">
+                           <mat-label>Cantidad de medición</mat-label>
+                           <input
+                             type="text"
+                             matInput
+                             placeholder="¿cuántos l. o ml. tiene?"
+                             autocomplete="off"
+                             formControlName="cantidadUnidades"
+                             id="cantidadUnidades"
+                             [errorStateMatcher]="matcher"
+                             (input)="validarNumeroDecimal($event)"
+                           />
+                           <mat-error
+                             *ngIf="form.get('cantidadUnidades')?.hasError('pattern') && !form.get('cantidadUnidades')?.hasError('required')"
+                           >
+                             <strong class="txt_msg">**Solo se admiten números</strong>
+                           </mat-error>
+                           <mat-error *ngIf="form.get('cantidadUnidades')?.hasError('required')">
+                             <strong class="txt_msg">**Campo requerido</strong>
+                           </mat-error>
+                         </mat-form-field>
+                         
                           <mat-form-field appearance="outline" class="inputs_properties">
                              <mat-label>Unidad de medicion</mat-label>
                              <mat-select
@@ -134,34 +164,8 @@
                                 <strong class="txt_msg">**Campo requerido</strong>
                              </mat-error>
                           </mat-form-field>
-                          <mat-form-field appearance="outline" class="inputs_properties">
-                             <mat-label>Cantidad de medición</mat-label>
-                             <input
-                                type="number"
-                                min="0"
-                                matInput
-                                placeholder="¿cuantos l. o ml. tiene?"
-                                autocomplete="off"
-                                formControlName="cantidadUnidades"
-                                id="cantidadUnidades"
-                                [errorStateMatcher]="matcher"
-                                />
-                             <mat-error
-                                *ngIf="
-                                form.get('cantidadUnidades')?.hasError('pattern') &&
-                                !form.get('cantidadUnidades')?.hasError('required')
-                                "
-                                >
-                                <strong class="txt_msg"
-                                   >**Solo se admiten numeros enteros</strong
-                                   >
-                             </mat-error>
-                             <mat-error
-                                *ngIf="form.get('cantidadUnidades')?.hasError('required')"
-                                ><strong class="txt_msg">**Campo requerido</strong></mat-error
-                                >
-                          </mat-form-field>
-                          <mat-form-field appearance="outline" class="inputs_properties">
+                         
+                       <!--  <mat-form-field appearance="outline" class="inputs_properties">
                              <mat-label>Sabor</mat-label>
                              <input
                                 type="text"
@@ -183,31 +187,28 @@
                              <mat-error *ngIf="form.get('sabor')?.hasError('required')"
                                 ><strong class="txt_msg">**Campo requerido</strong></mat-error
                                 >
-                          </mat-form-field>
+                          </mat-form-field>--> 
                           <mat-form-field appearance="outline" class="inputs_properties">
-                             <mat-label>Color</mat-label>
-                             <input
-                                type="text"
-                                matInput
-                                placeholder="Marca comercial"
-                                autocomplete="off"
-                                formControlName="color"
-                                id="color"
-                                [errorStateMatcher]="matcher"
-                                />
-                             <mat-error
-                                *ngIf="
-                                form.get('color')?.hasError('pattern') &&
-                                !form.get('color')?.hasError('required')
-                                "
-                                >
-                                <strong class="txt_msg">**Solo se admiten letras</strong>
-                             </mat-error>
-                             <mat-error *ngIf="form.get('color')?.hasError('required')"
-                                ><strong class="txt_msg">**Campo requerido</strong></mat-error
-                                >
-                          </mat-form-field>
-                          <mat-form-field appearance="outline" class="inputs_properties">
+                           <input
+                             matInput
+                             formControlName="sabor"
+                             placeholder="Escribe un sabor"
+                             [matAutocomplete]="auto"
+                             (input)="buscarSabores()"
+                           />
+                           <mat-autocomplete #auto="matAutocomplete" (optionSelected)="buscarSabores()">
+                             <mat-option *ngFor="let sabor of filteredSabores" [value]="sabor">
+                               {{ sabor }}
+                             </mat-option>
+                           </mat-autocomplete>
+                         </mat-form-field>
+                         
+                         
+                         
+                         
+                         
+                         
+                       <!--   <mat-form-field appearance="outline" class="inputs_properties">
                              <mat-label>Talla</mat-label>
                              <mat-select
                                 id="talla"
@@ -222,8 +223,9 @@
                              <mat-error *ngIf="form.get('talla')?.hasError('required')">
                                 <strong class="txt_msg">**Campo requerido</strong>
                              </mat-error>
-                          </mat-form-field>
+                          </mat-form-field>-->
                        </fieldset>
+                     </ng-container>
                     </div>
                     <div class="col-sm-6">
                        <p>
