--- a/src/app/modules/alta-categoria/alta-categoria.component.html
+++ b/src/app/modules/alta-categoria/alta-categoria.component.html
@@ -70,8 +70,9 @@
                 </div>
              </form>
     </div>
+    
     <div style="display: flex; justify-content: center;" mat-dialog-actions>
-      <button mat-stroked-button type="submit" (click)="enviar()" style="background-color: #fd9727; font-size: 20px;  height: 40px; margin-right: 90px;">Aceptar</button>
+      <button mat-stroked-button (click)="enviar()" style="background-color: #fd9727; font-size: 20px;  height: 40px; margin-right: 90px;">Aceptar</button>
       <button mat-stroked-button (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px;  height: 40px;color: white;">Cancelar</button>
    </div>
 
