--- a/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
+++ b/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
@@ -92,10 +92,10 @@
                                 <mat-form-field style="width: 95%;" required appearance="outline">
                                     <mat-label style="font-family: Arial; font-size: 18px;">Seleccionar dias</mat-label>
                                     <mat-select formControlName="duracion" multiple="false" >
-                                        <mat-option  value="1">1 día</mat-option>
-                                        <mat-option  value="15">15 días</mat-option>
-                                        <mat-option  value="30">1 mes</mat-option>
-                                        <mat-option  value="365">1 año</mat-option>
+                                        <mat-option  value="1">Visita</mat-option>
+                                        <mat-option  value="15">Quincena</mat-option>
+                                        <mat-option  value="30">Mensualidad </mat-option>
+                                        <mat-option  value="365">Anualidad</mat-option>
                                       </mat-select>
                                     <mat-error *ngIf="isFieldInvalid('duracion', 'required')">
                                         La duracion es requerida.
