--- a/src/app/modules/horarios/horarios.component.css
+++ b/src/app/modules/horarios/horarios.component.css
@@ -1,14 +1,18 @@
-/* Estilos generales del formulario */
-form {
-  max-width: 600px;
-  margin: auto;
-}
+
 
 /* Estilos de la tabla */
 table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
+}
+
+.title {
+  background-color: #eeeded;
+  padding: 12px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
 }
 
 th, td {
